# mini-gtm-data-platform

./: README.md  pyproject.toml  setup.sh
airflow/: airflow.cfg  airflow.db
airflow/dags/: build_evidence.py  ingest_accounts.py  ingest_call_trackers.py  ingest_calls.py  ingest_campaigns.py  ingest_contact_roles.py  ingest_contacts.py  ingest_lead_activities.py  ingest_leads.py  ingest_opportunities.py  ingest_product_events.py  ingest_product_users.py  ingest_stage_history.py  run_dbt.py
airflow/utils/: warehouse.py
assignment/: agent.py  context.py  draft.py  resolver.py
dbt_project/: .user.yml  dbt_project.yml  profiles.yml
dbt_project/models/marts/: dim_accounts.sql  dim_reps.sql  fct_calls.sql  fct_funnel.sql  fct_opportunities.sql  fct_product_usage.sql
dbt_project/models/staging/: _sources.yml  stg_accounts.sql  stg_call_trackers.sql  stg_calls.sql  stg_campaigns.sql  stg_contact_roles.sql  stg_contacts.sql  stg_lead_activities.sql  (+5 more)
evidence/: evidence.config.yaml  package-lock.json  package.json
evidence/pages/: deals.md  index.md
scripts/: generate_accounts.py  generate_all.py  generate_call_trackers.py  generate_calls.py  generate_campaigns.py  generate_contact_roles.py  generate_contacts.py  generate_lead_activities.py  generate_leads.py  generate_opportunities.py  generate_product_analytics.py  generate_stage_history.py
sources/postgres/: accounts.csv  call_trackers.csv  calls.csv  campaigns.csv  contact_roles.csv  contacts.csv  lead_activities.csv  leads.csv  opportunities.csv  product_events.csv  product_users.csv  stage_history.csv
(+40 files in other folders)
