[project]
name = "mini-data-platform-gtm"
version = "0.1.0"
description = "A mini data platform for GTM (Go-To-Market) teams with Salesforce, Gong, and Marketo data sources"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apache-airflow>=3.1.2",
    "dbt-duckdb>=1.10.0",
    "duckdb>=1.4.1",
]

